lander.lessons.lander.lvl1_lander_101.Lander101.scala.error
Lander:3: error: missing arguments for method setPousseeDesiree in class LanderEntity;
follow this method with `_' if you want to treat it as a partially applied function
	setPousseeDesiree
        ^